--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <meta property="og:title" content="PokeLingo" />
         <meta
             property="og:image"
-            content="https://kimanhou.github.io/pokelingo/hero.jpg"
+            content="https://kimanhou.github.io%BASE_URL%/hero.jpg"
         />
         <meta property="og:image:type" content="image/png" />
         <meta property="og:image:width" content="1200" />
@@ -44,7 +44,7 @@
         <meta property="og:type" content="website" />
         <meta
             property="og:url"
-            content="https://kimanhou.github.io/pokelingo/"
+            content="https://kimanhou.github.io%BASE_URL%/"
         />
     </head>
     <body>
