deploy: f93a088b4cb4ff307df5dcd63a69f3d4d1f2e9a0

--- a/branch/ka/home/index.html
+++ b/branch/ka/home/index.html
@@ -23,19 +23,19 @@
         <title>PokeLingo</title>
         <meta
             name="description"
-            content="Pokemon-themed tool for sprint retrospective"
+            content="Website to learn Japanese Pokemon names, their origins, and cultural references"
         />
         <meta
             name="description"
             property="og:description"
-            content="Pokemon-themed tool for sprint retrospective"
+            content="Website to learn Japanese Pokemon names, their origins, and cultural references"
         />
         <meta name="keywords" content="" />
         <meta property="og:site_name" content="PokeLingo" />
         <meta property="og:title" content="PokeLingo" />
         <meta
             property="og:image"
-            content="https://kimanhou.github.io/pokelingo/branch/ka/home/hero.jpg"
+            content="https://kimanhou.github.io/pokelingo/branch/ka/home/hero.png"
         />
         <meta property="og:image:type" content="image/png" />
         <meta property="og:image:width" content="1200" />
