--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         <title>PokeLingo</title>
         <meta
             name="description"
-            content="Website to learn Japanese Pokemon names, their origins, and cultural references"
+            content="Learn Japanese Pokemon names, their origins, and cultural references"
         />
         <meta
             name="description"
             property="og:description"
-            content="Website to learn Japanese Pokemon names, their origins, and cultural references"
+            content="Learn Japanese Pokemon names, their origins, and cultural references"
         />
         <meta name="keywords" content="" />
         <meta property="og:site_name" content="PokeLingo" />
