--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="icon" href="favicon.ico" />
+        <link rel="icon" href="public/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
-        <link rel="stylesheet" href="fonts.css" />
+        <link rel="stylesheet" href="public/fonts.css" />
         <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-        <link rel="manifest" href="manifest.json" />
+        <link rel="manifest" href="public/manifest.json" />
         <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -33,10 +33,7 @@
         <meta name="keywords" content="" />
         <meta property="og:site_name" content="PokeLingo" />
         <meta property="og:title" content="PokeLingo" />
-        <meta
-            property="og:image"
-            content="https://kimanhou.github.io%BASE_URL%/hero.png"
-        />
+        <meta property="og:image" content="public/hero.png" />
         <meta property="og:image:type" content="image/png" />
         <meta property="og:image:width" content="1200" />
         <meta property="og:image:height" content="630" />
@@ -44,7 +41,7 @@
         <meta property="og:type" content="website" />
         <meta
             property="og:url"
-            content="https://kimanhou.github.io%BASE_URL%/"
+            content="https://kimanhou.github.io/pokelingo/"
         />
     </head>
     <body>
