--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
         <meta name="keywords" content="" />
         <meta property="og:site_name" content="PokeLingo" />
         <meta property="og:title" content="PokeLingo" />
-        <meta property="og:image" content="hero.png" />
+        <meta
+            property="og:image"
+            content="https://kimanhou.github.io/pokelingo/branch/ka/metadata/hero.png"
+        />
         <meta property="og:image:type" content="image/png" />
         <meta property="og:image:width" content="1200" />
         <meta property="og:image:height" content="630" />
