--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <link rel="stylesheet" href="public/fonts.css" />
-        <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
         <link rel="manifest" href="public/manifest.json" />
         <title>PokeLingo</title>
         <meta
@@ -24,10 +20,9 @@
         <meta name="keywords" content="" />
         <meta property="og:site_name" content="PokeLingo" />
         <meta property="og:title" content="PokeLingo" />
-        <meta property="og:image" content="public/avatar.png" />
-        <meta property="og:image:type" content="image/png" />
-        <meta property="og:image:width" content="1200" />
-        <meta property="og:image:height" content="630" />
+        <meta property="og:image" content="public/hero.png" />
+        <meta property="og:image:width" content="1685" />
+        <meta property="og:image:height" content="794" />
         <meta property="og:image:alt" content="PokeLingo logo" />
         <meta property="og:type" content="website" />
         <meta
